# capability-mesh

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
capability_mesh/: __init__.py  a2a_compat.py  cli.py  client.py  core.py  dashboard.py  mcp_server.py
capability_mesh/client/: __init__.py  http.py
capability_mesh/grpc/: __init__.py  a2a.proto  binding.py
capability_mesh/hub/: __init__.py  registry.py  relay.py
capability_mesh/node/: __init__.py  a2a.py  client.py  runtime.py  runtime_queue.py
capability_mesh/node/dispatchers/: __init__.py  hermes_async.py
capability_mesh/server/: __init__.py  api.py  app.py  audit.py  outbound.py  policy.py  public_projection.py  push.py  redaction.py
capability_mesh/ui/: __init__.py  dashboard.py
capability_mesh/ui/static/: app.js  index.html  styles.css
deploy/: capability-mesh.service  docker-compose.yml  nginx-capability-mesh.conf
hermes_mesh/: __init__.py  cli.py  client.py  core.py  dashboard.py  mcp_server.py
scripts/: install_client.py  register_node.py
tests/capability_mesh/: test_a2a_production_features.py  test_a2a_protocol_1_compliance.py  test_architecture_split.py  test_core_independence.py  test_dashboard.py  test_hermes_async_dispatcher.py  test_hub_node_architecture.py  test_next_stage_production.py  test_production_hardening.py  test_production_maturity.py
tests/hermes_mesh/: test_architecture_split.py  test_core_independence.py  test_dashboard.py
tutorial/: lan-hub-and-pc-clients.md
