[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-mesh"
version = "0.1.0"
description = "Independent privacy-first capability mesh core"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nous Research" }]
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
capability-mesh = "capability_mesh.cli:main"
hermes-mesh = "hermes_mesh.cli:main"

[tool.setuptools.packages.find]
include = ["capability_mesh", "capability_mesh.*", "hermes_mesh", "hermes_mesh.*"]

[tool.setuptools.package-data]
capability_mesh = ["ui/static/*.html", "ui/static/*.js", "ui/static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
